--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "js-cookie": "^3.0.5",
+    "mongoose": "^7.4.3",
     "next": "13.4.17",
     "postcss": "8.4.28",
     "react": "18.2.0",
